updated responsiveness and fixed spacing issues

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -561,18 +561,44 @@ main {
     .anime-image-box {
         margin-right: 0;
         margin-bottom: 20px;
-        width: 140px;
-        height: 190px;
+        width: 170px;
+        height: 130px;
     }
 
     .anime-description {
         text-align: center;
     }
-}
 
 
 
+    .movies-rank-card {
+        flex-direction: column;
+         text-align: center;
+        align-items: center;
+        padding: 25px;
+    }
+    .movies-rank-badge {
+        border-right: none;
+       border-bottom: 2px solid #2d2d35;
+       padding-right: 0;
+       padding-bottom: 10px;
+       margin-right: 0;
+       margin-bottom: 15px;
+       width: 100%;
+    }
 
+    .movies-image-box {
+        margin-right: 0;
+        margin-bottom: 20px;
+        width: 170px;
+        height: 130px;
+    }
+
+    .movies-description {
+        text-align: center;
+    }
+
+}    
 /* ==========================================
    Updated Footer Section Styling
    ========================================== */
